--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -1,10 +1,14 @@
+<mat-toolbar>
+  <img class="logo_nav" mat-card-image src="../../assets/mainlogo.png" routerLink="/">
+  <button mat-button class="navLink" routerLink=""> Our Services </button>
+  <button mat-button class="navLink" routerLink=""> Pricing </button>
+  <button mat-button class="navLink" routerLink=""> About Us </button>
+  <span class="spacer"></span>
+  <button mat-button class="navLink" routerLink="/login"> Login </button>
+</mat-toolbar>
+
 <div class="container">
   <mat-card class="logincard">
-    <div>
-      <button mat-icon-button class="close-button">
-        <mat-icon routerLink="/home" class="close-icon" color="warn">close</mat-icon>
-      </button>
-    </div>
     <img class="logo" mat-card-image src="../../assets/mainlogo.png">
     <div class="loginTabs">
       <mat-tab-group>
