--- a/src/app/loginform/loginform.component.css
+++ b/src/app/loginform/loginform.component.css
@@ -1,24 +1,3 @@
-.mat-toolbar{
-    width: 100%;
-    height: fit-content;
-    background-color: #D62828;
-    color: white;
-}
-.navLink{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: larger;
-    margin: 5px;
-}
-.logo_nav
-{   
-    margin: 0;
-    width: 120px;
-    height: 100px;
-    padding-right: 30px;
-}
-.spacer {
-    flex: 1 1 auto;
-}
 .container{
     height: 100%;
     display: flex;
@@ -37,10 +16,10 @@
 }
 .logo
 {
-height: 20%;
-width: 40%;
-margin-left: 140px;
-
+    height: 20%;
+    width: 40%;
+    margin-left: 150px;
+    padding-top: 50px;
 }
 .login-emailfield
 {
@@ -149,14 +128,12 @@ margin-left: 140px;
     color: #14213D;
        
 }
-
 .loginTabs
 {
-    margin-left: -10px;
+    margin-left: 0px;
 }
-
 .mat-tab-group
 {
     width: 320px;
-    margin-left: 100px;
+    margin-left: 95px;
 }
